[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
itertools = "0.12"
rayon = "1.8"
ndarray = "0.15"

# For downloading input
reqwest = { version = "0.11", features = ["blocking"] }
dotenv = "0.15.0"

[dev-dependencies]
criterion = "0.5.1"

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "advent-of-code-2023"
path = "src/main.rs"
bench = false


[[bench]]
name = "all_days"
harness = false

[profile.bench]
debug = true
